--- a/app/views/routes/show.html.erb
+++ b/app/views/routes/show.html.erb
@@ -5,5 +5,12 @@
   <%= @route.name %>
 </p>
 
+<p>
+  <strong>Поезда на маршруте:</strong>
+    <% @route.trains.each do |train| %>
+      <p>Поезд №<%= train.number %> </p>
+    <% end %>
+</p>
+
 <%= link_to 'Редактировать', edit_route_path(@route) %> |
 <%= link_to 'Назад', routes_path %>
