--- a/app/views/routes/show.html.erb
+++ b/app/views/routes/show.html.erb
@@ -7,9 +7,28 @@
 
 <p>
   <strong>Поезда на маршруте:</strong>
-    <% @route.trains.each do |train| %>
-      <p>Поезд №<%= train.number %> </p>
-    <% end %>
+  <% if @route.trains.empty? %>
+    Поездов на маршруте нет
+  <% else %>
+    <ul>
+      <% @route.trains.each do |train| %>
+        <li> Поезд №<%= train.number %> </li>
+      <% end %>
+    </ul>
+  <% end %>
+</p>
+
+<p>
+  <strong>Станции маршрута:</strong>
+  <% if @route.railway_stations.empty? %>
+    Станций в маршруте нет
+  <% else %>
+    <ul>
+      <% @route.railway_stations.each do |station| %>
+        <li><%= station.title %> </li>
+      <% end %>
+    </ul>
+  <% end %>
 </p>
 
 <%= link_to 'Редактировать', edit_route_path(@route) %> |
