--- a/app/views/carriages/_carriage.html.erb
+++ b/app/views/carriages/_carriage.html.erb
@@ -1,5 +1,5 @@
 <tr>
-  <td><%= carriage.number %></td>
+  <td><%= carriage.id %></td>
   <td><%= link_to 'Показать', carriage %></td>
   <td><%= link_to 'Изменить', edit_carriage_path(carriage) %></td>
   <td><%= link_to 'Удалить', carriage, method: :delete, data: { confirm: 'Вы уверены?' } %></td>
