--- a/app/views/trains/show.html.erb
+++ b/app/views/trains/show.html.erb
@@ -57,9 +57,5 @@
   <%= @train.places[:third_class_bottom_places] %>
 </p>
 
-
-
-
-
-<%= link_to 'Edit', edit_train_path(@train) %> |
-<%= link_to 'Back', trains_path %>
+<%= link_to 'Редактировать', edit_train_path(@train) %> |
+<%= link_to 'Назад', trains_path %>
