--- a/app/views/carriages/index.html.slim
+++ b/app/views/carriages/index.html.slim
@@ -4,7 +4,8 @@ table
   thead
     tr
       th Номер
-      th colspan: "3"
+      th Поезд
+      th { colspan: 3 }
   tbody
     = render 'carriage' , collection: @carriages
 br/
