--- a/app/views/trains/show.html.slim
+++ b/app/views/trains/show.html.slim
@@ -1,19 +1,21 @@
 p#notice= notice
 p
   strong Номер поезда:
+  br
   = @train.number
+
 p
   strong На станции
-ul
+  br
   - if @train.current_station
-    li= @train.current_station.title
+    = link_to "#{@train.current_station.title}", @train.current_station
   - else
     | Станция не назначена
 p
   strong Маршрут
-ul
+  br
   - if @train.route
-    li= @train.route.name
+    = link_to "#{@train.route.name}", @train.route
   - else
     | Маршрут не назначен
 p
@@ -34,6 +36,18 @@ p
 p
   strong Плацкартных нижних мест:
   = @train.places[:third_class_bottom_places]
+p
+  strong Плацкартных боковых верхних мест:
+  = @train.places[:third_class_side_upper_places]
+p
+strong Плацкартных боковых нижних мест:
+= @train.places[:third_class_side_buttom_places]
+p
+  strong Вагоны
+  ul
+    - @train.carriages.each do |carriage|
+      li
+        = link_to "Вагон № #{carriage.number}" , carriage_path(carriage)
 = link_to 'Редактировать', edit_train_path(@train)
 | \
 = link_to 'Назад', trains_path
