method places quantity

--- a/app/views/carriages/_third_class_carriage.html.slim
+++ b/app/views/carriages/_third_class_carriage.html.slim
@@ -5,7 +5,7 @@ strong Количество нижних мест:
 = carriage.bottom_places
 br
 strong Количество верхних боковых мест:
-= carriage.slide_upper_places
+= carriage.side_upper_places
 br
 strong Количество нижних боковых мест:
-= carriage.slide_bottom_places
+= carriage.side_bottom_places
