--- a/app/views/carriages/_form.html.slim
+++ b/app/views/carriages/_form.html.slim
@@ -5,6 +5,9 @@
     - if carriage.new_record?
       = select_tag(:class_id,
         options_for_select([['св', 1], ['купе', 2], ['плацкарт', 3], ['сидячий', 4]]))
+    - else
+      strong Тип вагона:
+      = carriage.car_type
 
   .field
     = f.label :upper_places, 'Количество верхних мест'
