--- a/app/views/carriages/show.html.slim
+++ b/app/views/carriages/show.html.slim
@@ -4,7 +4,7 @@ p
   = @carriage.number
 p
   strong Тип вагона:
-  = @carriage.car_type[@carriage.type]
+  = Carriage::CAR_TYPE[@carriage.type]
 p
   = render @carriage.class.to_s.underscore, carriage: @carriage
 p
