--- a/app/views/carriages/index.html.slim
+++ b/app/views/carriages/index.html.slim
@@ -9,4 +9,4 @@ table
   tbody
     = render 'carriage', collection: @carriages
 br/
-= link_to 'Новый вагон', new_carriage_path
+= link_to 'Новый вагон', new_train_carriage_path
