--- a/app/views/carriages/_carriage.html.slim
+++ b/app/views/carriages/_carriage.html.slim
@@ -1,7 +1,7 @@
 - @carriages.each do |carriage|
   tr
-    td= link_to "#{carriage.number}", carriage_path(carriage)
+    td= link_to "#{carriage.number}", train_carriage_path(:train, carriage)
     td= link_to "#{carriage.train.number}", carriage.train
-    td= link_to 'Показать', carriage_path(carriage)
-    td= link_to 'Изменить', edit_carriage_path(carriage)
-    td= link_to 'Удалить', carriage_path(carriage), method: :delete, data: { confirm: 'Вы уверены?' }
+    td= link_to 'Показать', train_carriage_path(:train, carriage)
+    td= link_to 'Изменить', edit_train_carriage_path(:train, carriage)
+    td= link_to 'Удалить', train_carriage_path(:train, carriage), method: :delete, data: { confirm: 'Вы уверены?' }
