--- a/app/views/routes/show.html.slim
+++ b/app/views/routes/show.html.slim
@@ -28,14 +28,14 @@ p
           td = link_to station.title, station
           td
             = form_tag update_time_railway_station_path(station), method: :patch do
-              = date_field_tag :arrive_time, station.arrive_time_in(@route)
-              = date_field_tag :depart_time, station.depart_time_in(@route)
+              = date_field_tag :arrive_time, station.attr_in(@route, :arrive_time)
+              = date_field_tag :depart_time, station.attr_in(@route, :depart_time)
               = hidden_field_tag :route_id, @route.id
               = submit_tag 'Изменить'
 
           td
             = form_tag update_position_railway_station_path(station), method: :patch do
-              = number_field_tag :position, station.position_in(@route)
+              = number_field_tag :position, station.attr_in(@route, :station_index)
               = hidden_field_tag :route_id, @route.id
               = submit_tag 'Изменить'
 
