--- a/app/views/railway_stations/index.html.slim
+++ b/app/views/railway_stations/index.html.slim
@@ -4,7 +4,7 @@ table
   thead
     tr
       th Title
-      th colspan: "3" 
+      th { colspan: 3 }
   tbody
     = render @railway_stations
 br/
