--- a/app/views/layouts/admin.html.slim
+++ b/app/views/layouts/admin.html.slim
@@ -1,7 +1,7 @@
 doctype html
 html
   head
-    title Tutu
+    title Tutu - Администратор
     meta charset='UTF-8'
     = csrf_meta_tags
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => 'reload'
