--- a/app/views/admin/resources/index.html.slim
+++ b/app/views/admin/resources/index.html.slim
@@ -3,3 +3,7 @@ ul
     = link_to 'Станции', admin_railway_stations_path
   li
     = link_to 'Поезда', admin_trains_path
+  li
+    = link_to 'Маршруты', admin_routes_path
+  li
+    = link_to 'Билеты', admin_tickets_path
