--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -7,17 +7,4 @@ html
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track' => 'reload'
   body
-    p.notice#notice
-      = notice
-    p.alert#alert
-      = alert
-
-    - if user_signed_in?
-      = link_to "Выйти", destroy_user_session_path, method: :delete
-      p Привет
-        #{current_user.first_name} !
-    - else
-      = link_to "Войти", new_user_session_path
-
-    = yield
-    = render 'layouts/footer'
+    = render 'layouts/body'
