--- a/app/views/admin/carriages/_second_class_carriage.html.slim
+++ b/app/views/admin/carriages/_second_class_carriage.html.slim
@@ -1,5 +1,5 @@
-strong Количество верхних мест:
+strong = t('.place_upper_quantity')
 = carriage.upper_places
 br
-strong Количество нижних мест:
+strong = t('.place_bottom_quantity')
 = carriage.bottom_places
