--- a/app/views/admin/resources/index.html.slim
+++ b/app/views/admin/resources/index.html.slim
@@ -1,9 +1,9 @@
 ul
   li
-    = link_to 'Станции', admin_railway_stations_path
+    = link_to t('common.railway_stations'), admin_railway_stations_path
   li
-    = link_to 'Поезда', admin_trains_path
+    = link_to t('common.trains'), admin_trains_path
   li
-    = link_to 'Маршруты', admin_routes_path
+    = link_to t('common.routes'), admin_routes_path
   li
-    = link_to 'Билеты', admin_tickets_path
+    = link_to t('common.tickets'), admin_tickets_path
