--- a/app/views/admin/carriages/_carriage.html.slim
+++ b/app/views/admin/carriages/_carriage.html.slim
@@ -2,6 +2,7 @@
   tr
     td= link_to "#{carriage.number}", admin_carriage_path(carriage)
     td= link_to "#{carriage.train.number}", [:admin, carriage.train]
-    td= link_to 'Показать', admin_carriage_path(carriage)
-    td= link_to 'Изменить', edit_admin_carriage_path(carriage)
-    td= link_to 'Удалить', admin_carriage_path(carriage), method: :delete, data: { confirm: 'Вы уверены?' }
+    td= link_to t('common.show'), admin_carriage_path(carriage)
+    td= link_to t('common.edit'), edit_admin_carriage_path(carriage)
+    td= link_to t('common.delete'), admin_carriage_path(carriage),
+      method: :delete, data: { confirm: t('common.shure?') }
