--- a/app/views/admin/carriages/_form.html.slim
+++ b/app/views/admin/carriages/_form.html.slim
@@ -5,24 +5,24 @@
     - if carriage.new_record?
       = f.collection_select :type, Carriage::CAR_TYPES, :first, :last
     - else
-      strong Тип вагона:
+      strong = t('common.carriage_type')
       = Carriage::CAR_TYPES[carriage.type]
 
   .field
-    = f.label :upper_places, 'Количество верхних мест'
+    = f.label :upper_places, t('admin.carriages.second_class_carriage.place_upper_quantity')
     = f.number_field :upper_places
   .field
-    = f.label :bottom_places, 'Колличества нижних мест'
+    = f.label :bottom_places, t('admin.carriages.second_class_carriage.place_bottom_quantity')
     = f.number_field :bottom_places
   .field
-    = f.label :side_upper_places, 'Колличества верхних боковых мест'
+    = f.label :side_upper_places, t('admin.carriages.third_class_carriage.place_side_upper_quantity')
     = f.number_field :side_upper_places
   .field
-    = f.label :side_bottom_places, 'Колличества нижних боковых мест'
+    = f.label :side_bottom_places, t('admin.carriages.third_class_carriage.place_side_bottom_quantity')
     = f.number_field :side_bottom_places
 
   .field
-    = f.label :train, 'Поезд'
+    = f.label :train, t('common.train_number')
     = f.collection_select :train_id, Train.all, :id, :number
   .actions
     = f.submit 'Сохранить'
