--- a/app/views/admin/carriages/_third_class_carriage.html.slim
+++ b/app/views/admin/carriages/_third_class_carriage.html.slim
@@ -1,11 +1,11 @@
-strong Количество верхних мест:
+strong = t('.place_upper_quantity')
 = carriage.upper_places
 br
-strong Количество нижних мест:
+strong = t('.place_bottom_quantity')
 = carriage.bottom_places
 br
-strong Количество верхних боковых мест:
+strong = t('.place_side_upper_quantity')
 = carriage.side_upper_places
 br
-strong Количество нижних боковых мест:
+strong = t('.place_side_bottom_quantity')
 = carriage.side_bottom_places
