--- a/app/views/admin/carriages/edit.html.slim
+++ b/app/views/admin/carriages/edit.html.slim
@@ -1,5 +1,5 @@
-h1 Изменение вагона
+h1 = t('.edit')
 = render 'form', carriage: @carriage
-= link_to 'Показать', admin_carriage_path(@carriage)
+= link_to t('common.show'), admin_carriage_path(@carriage)
 | \
-= link_to 'Назад', admin_train_carriages_path(@carriage.train)
+= link_to t('common.back'), admin_train_carriages_path(@carriage.train)
