--- a/app/views/admin/carriages/new.html.slim
+++ b/app/views/admin/carriages/new.html.slim
@@ -1,3 +1,3 @@
-h1 Новый вагон
+h1 = t('.new')
 = render 'form', carriage: @carriage
-= link_to 'Back', admin_train_carriages_path
+= link_to t('common.back'), admin_train_carriages_path
