--- a/app/views/admin/railway_stations/_form.html.slim
+++ b/app/views/admin/railway_stations/_form.html.slim
@@ -4,4 +4,4 @@
     = f.label :title
     = f.text_field :title
   .actions
-    = f.submit "#{ railway_station.new_record? ? 'Создать' : 'Изменить' }"
+    = f.submit t('.submit', action: @railway_station.new_record? ? 'Создать' : 'Изменить')
