--- a/app/views/admin/railway_stations/index.html.slim
+++ b/app/views/admin/railway_stations/index.html.slim
@@ -1,10 +1,10 @@
-h1 Railway Stations
+h1 = t('common.railway_stations')
 table
   thead
     tr
-      th Title
+      th = t('.title')
       th { colspan: 3 }
   tbody
     = render @railway_stations
 br/
-= link_to 'New Railway Station', new_admin_railway_station_path
+= link_to t('.create'), new_admin_railway_station_path
