--- a/app/views/admin/railway_stations/new.html.slim
+++ b/app/views/admin/railway_stations/new.html.slim
@@ -1,3 +1,3 @@
-h1 New Railway Station
+h1 = t('.title')
 = render 'form', railway_station: @railway_station
-= link_to 'Back', admin_railway_stations_path
+= link_to t('common.back'), admin_railway_stations_path
