--- a/app/views/admin/railway_stations/show.html.slim
+++ b/app/views/admin/railway_stations/show.html.slim
@@ -1,7 +1,6 @@
-p#notice= notice
 p
-  strong Title:
+  strong = t('.title')
   = @railway_station.title
-= link_to 'Edit', edit_admin_railway_station_path(@railway_station)
+= link_to t('common.edit'), edit_admin_railway_station_path(@railway_station)
 | \
-= link_to 'Back', admin_railway_stations_path
+= link_to t('common.back'), admin_railway_stations_path
