--- a/app/views/admin/trains/index.html.slim
+++ b/app/views/admin/trains/index.html.slim
@@ -1,10 +1,10 @@
-h1 Trains
+h1 = t('.title')
 table
   thead
     tr
-      th Number
+      th = t('.number')
       th { colspan: 3 }
   tbody
     = render @trains
 br/
-= link_to 'New Train', new_admin_train_path
+= link_to t('.new_train'), new_admin_train_path
