--- a/app/views/layouts/_body.html.slim
+++ b/app/views/layouts/_body.html.slim
@@ -1,13 +1,37 @@
-p.notice#notice
-  = notice
-p.alert#alert
-  = alert
+/ p.notice#notice
+/   = notice
+/ p.alert#alert
+/   = alert
+/
+/ - if user_signed_in?
+/   = link_to "Выйти", destroy_user_session_path, method: :delete
+/   p Привет #{current_user.first_name}!
+/ - else
+/   = link_to "Войти", new_user_session_path
+/
+/ = yield
 
-- if user_signed_in?
-  = link_to "Выйти", destroy_user_session_path, method: :delete
-  p Привет #{current_user.first_name}!
-- else
-  = link_to "Войти", new_user_session_path
+.navbar.navbar-default.navbar-static-top
+    .container
+      button.navbar-toggle type="button" data-toggle="collapse" data-target=".navbar-responsive-collapse"
+        span.icon-bar
+        span.icon-bar
+        span.icon-bar
+      a.navbar-brand href="#"Tutu
+      .navbar-collapse.collapse.navbar-responsive-collapse
+        ul.nav.navbar-nav
+          - if user_signed_in?
+            li= link_to t('common.exit'), destroy_user_session_path, method: :delete
+            - if current_user.admin?
+              li= link_to t('common.admin_interface'), admin_resources_path
+          - else
+            li= link_to t('common.enter'), new_user_session_path
 
-= yield
-= render 'layouts/footer'
+.container
+  .row
+    .col-lg-12
+      = bootstrap_flash
+      = yield
+
+  footer
+    p = render 'layouts/footer'
